--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nucampsiteserver",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -11,6 +11,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^5.8.7",
+    "mongoose-currency": "^0.2.0",
     "morgan": "~1.9.1"
   }
 }
